welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: illegal start of simple expression
	if(a*b < 0 && !negative))
                                ^