welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
var bool = false;
	if(a*b < 0 && !negative))
	{
		bool = true;
	}
	else
	{

		if(a < 0 && negative){
			bool = true;
		}
		
	}
return bool;
}
